--- a/todo-frontend/Dockerfile
+++ b/todo-frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:22.9.0-slim AS build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --only=production
+RUN npm install 
 COPY . .
 RUN npm run build
 
