--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^5.1.0"
   },
