--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -5,6 +5,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    environment:
+      - CURRENT_ENV=blue
     depends_on:
       - frontend-blue
       - backend-blue
