--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -5,6 +5,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    environment:
+      - CURRENT_ENV=green
     depends_on:
       - frontend-green
       - backend-green
