--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,10 +115,11 @@ jobs:
         # Wait for all services in the new environment to be healthy
         timeout 120s bash -c 'until docker compose -f docker-compose.$NEXT_ENV.yml ps | grep -q healthy; do sleep 2; done'
         # Update Nginx configuration
-        sed -i 's/server frontend-$CURRENT_ENV:80;/server frontend-$CURRENT_ENV:80 backup;/' nginx.conf
-        sed -i 's/server frontend-$NEXT_ENV:80 backup;/server frontend-$NEXT_ENV:80;/' nginx.conf
-        sed -i 's/server backend-$CURRENT_ENV:8080;/server backend-$CURRENT_ENV:8080 backup;/' nginx.conf
-        sed -i 's/server backend-$NEXT_ENV:8080 backup;/server backend-$NEXT_ENV:8080;/' nginx.conf
+        sed -i "s/server frontend-\$CURRENT_ENV:80;/server frontend-${CURRENT_ENV}:80 backup;/" nginx.conf
+        sed -i "s/server frontend-\$NEXT_ENV:80 backup;/server frontend-${NEXT_ENV}:80;/" nginx.conf
+        sed -i "s/server backend-\$CURRENT_ENV:8080;/server backend-${CURRENT_ENV}:8080 backup;/" nginx.conf
+        sed -i "s/server backend-\$NEXT_ENV:8080 backup;/server backend-${NEXT_ENV}:8080;/" nginx.conf
+
         
         # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$NEXT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
@@ -143,10 +144,11 @@ jobs:
         timeout 120s bash -c 'until docker compose -f docker-compose.$CURRENT_ENV.yml ps | grep -q healthy; do sleep 2; done'
 
         # Revert Nginx configuration
-        sed -i 's/server frontend-$CURRENT_ENV:80 backup;/server frontend-$CURRENT_ENV:80;/' nginx.conf
-        sed -i 's/server frontend-$NEXT_ENV:80;/server frontend-$NEXT_ENV:80 backup;/' nginx.conf
-        sed -i 's/server backend-$CURRENT_ENV:8080 backup;/server backend-$CURRENT_ENV:8080;/' nginx.conf
-        sed -i 's/server backend-$NEXT_ENV:8080;/server backend-$NEXT_ENV:8080 backup;/' nginx.conf
+        sed -i "s/server frontend-\$CURRENT_ENV:80;/server frontend-${CURRENT_ENV}:80 backup;/" nginx.conf
+        sed -i "s/server frontend-\$NEXT_ENV:80 backup;/server frontend-${NEXT_ENV}:80;/" nginx.conf
+        sed -i "s/server backend-\$CURRENT_ENV:8080;/server backend-${CURRENT_ENV}:8080 backup;/" nginx.conf
+        sed -i "s/server backend-\$NEXT_ENV:8080 backup;/server backend-${NEXT_ENV}:8080;/" nginx.conf
+
         
         # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$CURRENT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
