--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -6,7 +6,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
-      - CURRENT_ENV="green"
+      - CURRENT_ENV=green
+    command: /bin/bash -c "envsubst '$$CURRENT_ENV' < /etc/nginx/nginx.conf > /etc/nginx/nginx.conf.tmp && mv /etc/nginx/nginx.conf.tmp /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     depends_on:
       - frontend-green
       - backend-green
