--- a/todo-backend/src/main/resources/application.yaml
+++ b/todo-backend/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
+DB_URL : mysql://localhost:3306/todo_list
+DB_USERNAME : root
+DB_PASSWORD : 0
+CORS_ORIGIN : http://localhost:3000
 spring:
   application:
     name: todo-backend
@@ -7,7 +11,6 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,8 +18,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-
-
 server:
   port: 8080
 
