--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -4,10 +4,11 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf.template:ro
+      - nginx-cache:/var/cache/nginx
     environment:
       - CURRENT_ENV=green
-    command: /bin/bash -c "envsubst '$$CURRENT_ENV' < /etc/nginx/nginx.conf > /etc/nginx/nginx.conf.tmp && mv /etc/nginx/nginx.conf.tmp /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    command: /bin/bash -c "envsubst '\$CURRENT_ENV' < /etc/nginx/nginx.conf > /etc/nginx/nginx.conf.tmp && mv /etc/nginx/nginx.conf.tmp /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     depends_on:
       - frontend-green
       - backend-green
@@ -17,6 +18,7 @@ services:
       context: ./todo-frontend
       dockerfile: Dockerfile
     image: thanh2k4/todo_list-frontend:green
+    user: root
     expose:
       - "80"
 
@@ -28,10 +30,10 @@ services:
     expose:
       - "8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/todo_list?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: ${DB_USER:-root}
-      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD:-0}
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      DB_URL: ${DB_URL:-mysql://db:3306/todo_list}
+      DB_USERNAME: ${MYSQL_USER:-root}
+      DB_PASSWORD: ${MYSQL_PASSWORD:-0}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:3000}
     depends_on:
       - db
 
@@ -40,10 +42,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-0}
       MYSQL_DATABASE: todo_list
-      MYSQL_USER: ${DB_USER:-root}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-0}
     volumes:
       - mysql-data:/var/lib/mysql
+      - /usr/share/zoneinfo:/usr/share/zoneinfo:ro
 
 volumes:
   mysql-data:
+  nginx-cache:
