--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,8 +110,9 @@ jobs:
         echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
         
         # Start the new environment
+        docker compose up --remove-
+        docker ps
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
-        docker compose -f docker-compose.$NEXT_ENV.yml ps
 
         # Wait for all services in the new environment to be healthy
         timeout 120s bash -c 'until docker compose -f docker-compose.$NEXT_ENV.yml ps | grep -q healthy; do sleep 2; done'
