--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,8 @@ jobs:
         echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
         
         # Start the new environment
-
+        docker compose up --remove-orphans -d
+        docker compose -f docker-compose.$CURRENT_ENV.yml up -d
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
 
         # Wait for all services in the new environment to be healthy
